# bb-sbbu

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  callBB.sh  check_chinese.md  createRunCommands.py  create_db.py  create_instances.py  create_random.py  readResults.ipynb  read_results.py  report.ipynb  runAll.py  runAllTests.py  runProfiler.py  run_all.cmd  run_all.py  run_profiler.py
DATA_TEST/: testA.nmr  testB.nmr  testC.nmr  testD.nmr  testE.nmr  testF.nmr  testG.nmr  testH.nmr
codes/: bb.cpp  bb.h  bb.py  bb_memo.py  call_random.py  create_random.py  readResults.ipynb  report.ipynb  test.py  tests.cpp  tests.h  tests.py
data/nmr/: 1adx_chain_A_dmax_4.nmr  1adx_chain_A_dmax_5.nmr  1adx_chain_A_dmax_6.nmr  1adx_chain_A_dmax_7.nmr  1all_chain_A_dmax_4.nmr  1all_chain_A_dmax_5.nmr  1all_chain_A_dmax_6.nmr  1all_chain_A_dmax_7.nmr  1bdo_chain_A_dmax_4.nmr  1bdo_chain_A_dmax_5.nmr  1bdo_chain_A_dmax_6.nmr  1epw_chain_A_dmax_4.nmr  1epw_chain_A_dmax_5.nmr  1epw_chain_A_dmax_6.nmr  1epw_chain_A_dmax_7.nmr  1fhl_chain_A_dmax_4.nmr  1fhl_chain_A_dmax_5.nmr  1fhl_chain_A_dmax_6.nmr  1fhl_chain_A_dmax_7.nmr  1fw5_chain_A_dmax_4.nmr  1fw5_chain_A_dmax_5.nmr  1fw5_chain_A_dmax_6.nmr  1fw5_chain_A_dmax_7.nmr  1n6t_chain_A_dmax_4.nmr  1n6t_chain_A_dmax_5.nmr  1n6t_chain_A_dmax_6.nmr  1n6t_chain_A_dmax_7.nmr  3vkh_chain_A_dmax_4.nmr  4rh7_chain_A_dmax_4.nmr  4wua_chain_A_dmax_4.nmr  4wua_chain_A_dmax_5.nmr  4wua_chain_A_dmax_6.nmr  4wua_chain_A_dmax_7.nmr  5ijn_chain_A_dmax_4.nmr  5ijn_chain_A_dmax_5.nmr  5ijn_chain_A_dmax_6.nmr  5ijn_chain_A_dmax_7.nmr  5np0_chain_A_dmax_4.nmr  (+18 more)
latex/: branchAndBound1.py  branchAndBound2.py  branchAndBound3.py
sources/: bb.py  bb_memo.py  test.py
(+28 files in other folders)
